<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsActivity"
    tools:showIn="@layout/activity_settings">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedBox"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/speed"
        android:textSize="36sp"
        android:text="@string/speed1000"
        android:layout_margin="24sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <Button
        android:text="@string/done"
        android:onClick="doneClicked"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.support.v7.widget.LinearLayoutCompat>



